Update README
We're keeping most of our user documentation on whylabs.ai. Rather than
keeping the readme up to date (which it isn't) I'll just scope the
readme to dev stuff and point to our doc site for the rest.